src/test/deca/context/invalid/created/int-in-bool.deca
//Tentative d'affectation d'une valeur à une variable de type différent
{
	bool a = 3;
}